[gd_scene load_steps=11 format=3 uid="uid://dem3mo2wlnxg1"]

[ext_resource type="Script" path="res://scripts/GeneralUI.gd" id="1_jeuno"]
[ext_resource type="AudioStream" uid="uid://d3xrse4yw41p1" path="res://assets/sounds/coin/CoinA.wav" id="2_pa3oa"]
[ext_resource type="AudioStream" uid="uid://d2sljvx351vjo" path="res://assets/sounds/coin/CoinB.wav" id="3_8rf82"]
[ext_resource type="AudioStream" uid="uid://kr1putpoorm1" path="res://assets/sounds/coin/CoinDropG.wav" id="4_rrm7c"]
[ext_resource type="AudioStream" uid="uid://djso6gy1aghfw" path="res://assets/sounds/coin/CoinDropS.wav" id="5_faqo0"]
[ext_resource type="FontFile" uid="uid://csjw5posryyf3" path="res://assets/fonts/GothicA1-Bold.ttf" id="6_rtbj8"]
[ext_resource type="FontFile" uid="uid://ibuondk6mqev" path="res://assets/fonts/IwataMaruGothicW55-B.ttf" id="7_lmtsl"]
[ext_resource type="Texture2D" uid="uid://dlitaxjmqrcxo" path="res://assets/images/dollarUI.png" id="8_63x73"]
[ext_resource type="Texture2D" uid="uid://s8m64sur16lr" path="res://assets/images/coinUI.png" id="9_8456y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_liab6"]
bg_color = Color(0.105882, 0.145098, 0.180392, 0.839216)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55

[node name="GeneralUI" type="CanvasLayer" groups=["UI"]]
script = ExtResource("1_jeuno")
collectSoundSFX = Array[Resource]([ExtResource("2_pa3oa"), ExtResource("3_8rf82"), ExtResource("4_rrm7c"), ExtResource("5_faqo0")])

[node name="Bank" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
scale = Vector2(0.799868, 0.799868)

[node name="Frame" type="Panel" parent="Bank"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -215.0
offset_top = 11.0
offset_right = 16.0
offset_bottom = 64.0
grow_horizontal = 0
scale = Vector2(0.750835, 0.750835)
pivot_offset = Vector2(90, 25.705)
theme_override_styles/panel = SubResource("StyleBoxFlat_liab6")

[node name="moneyAmm" type="RichTextLabel" parent="Bank"]
clip_contents = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_top = 26.0
offset_right = -29.0
offset_bottom = 52.0
grow_horizontal = 0
scale = Vector2(0.88, 0.88)
pivot_offset = Vector2(138.95, 0)
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/normal_font = ExtResource("6_rtbj8")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[right]0.00 "
scroll_active = false

[node name="Sign" type="RichTextLabel" parent="Bank"]
clip_contents = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.03
offset_top = 13.7523
offset_right = -146.03
offset_bottom = 56.7523
grow_horizontal = 0
scale = Vector2(1.04893, 1.04893)
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/normal_font = ExtResource("7_lmtsl")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "$"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 640.0
offset_bottom = 480.0

[node name="dollar" type="Sprite2D" parent="SubViewportContainer"]
visible = false
position = Vector2(348, 222)
scale = Vector2(0.7, 0.7)
texture = ExtResource("8_63x73")

[node name="coin" type="Sprite2D" parent="SubViewportContainer"]
visible = false
position = Vector2(348, 222)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_8456y")

[node name="CollectSound" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="CollectSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pa3oa")
volume_db = -12.059
pitch_scale = 0.75
bus = &"SFX"
